# GUI-Research

./: .clang-format  CMakeLists.txt  agui.cpp  agui.h  layout.cpp  layout.h  main.cpp  sdl2_renderer_backend.cpp  sdl2_renderer_backend.h  shapes.cpp  shapes.h  widgets.cpp  widgets.h
